app12/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-appnavn
  namespace: ns-appnavn
spec:
  selector:
    matchLabels:
      app: app-appnavn
  replicas: 2
  template:
    metadata:
      labels:
        app: app-appnavn
    spec:
      containers:
      - name: appnavn-container
        image: tutum/hello-world
        ports:
        - containerPort: 80
        volumeMounts:
        - name: volume-config-app
          mountPath: /config/
    volumes:
    - name: "volume-config-app"
      configMap:
        name: configmap-app
