app12/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-appnavn
  namespace: ns-appnavn
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: app-appnavn
