app12/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appnavn
  namespace: ns-appnavn
  annotations:
    #external-dns.alpha.kubernetes.io/target: 83.118.177.220
    cert-manager.io/cluster-issuer: fhi-k8s-letsencrypt-azuredns-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: appnavn.fhi-k8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-appnavn
            port:
              number: 80
  tls:
    - hosts:
        - appnavn.fhi-k8s.com
      secretName: tls-appnavn
